# beaker

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.MD  LICENSE  Makefile  README.md  TODO.md  blog.md  codecov.yml  config.test  distribute.sh  docker-compose.yml  mypy.ini  off.teal  on.teal  pyproject.toml  pyteal.ini  requirements.txt  setup.py
.github/workflows/: build-python.yaml  cd.yaml  cd_retry.yaml  check-python.yaml  main.yml  pr.yaml  validation.yaml
beaker/: __init__.py  annotations.py  annotations_test.py  application.py  application_client.py  application_schema.py  application_schema_test.py  application_spec.py  application_spec_test.py  application_specification.py  application_test.py  blueprints.py  build_options.py  compilation.py  compiled_application.py  consts.py  decorators.py  decorators_test.py  errors.py  logic_signature.py  logic_signature_test.py  model.py  model_test.py  precompile.py  precompile_test.py  preparser.py  preparser_test.py  state.py  state_test.py  struct.py  struct_test.py  utils.py
beaker/arcs/: arc18.py
beaker/client/: __init__.py  api_providers.py  api_providers_test.py  application_client.py  application_client_test.py  logic_error.py  simulate.py  state_decode.py
beaker/contracts/: __init__.py  op_up.py  op_up_test.py  wormhole.py
beaker/decorators/: __init__.py  authorize.py
beaker/lib/: __init__.py  inline.py  iter.py  math.py  strings.py
beaker/localnet/: __init__.py  clients.py  kmd.py
beaker/logic_signature/: __init__.py  decorators.py  logic_signature.py
beaker/preprocess/: __init__.py  _builtins.py  builtins.py  preprocessor.py  preprocessor_test.py  round_trip_test.py  unprocessor.py  unprocessor_test.py  variable.py
beaker/sandbox/: __init__.py  algod.py  clients.py  kmd.py  kmd_test.py
beaker/state/: __init__.py  _abc.py  _aggregate.py  blob.py  primitive.py  reserved.py
beaker/testing/: __init__.py  account_info.py  helpers.py  legacy.py  unit_testing_helpers.py
blog/: blog.md  wget-log
docs/: Makefile  README.md
docs/doctrees/: application.doctree  application_client.doctree  boxes.doctree  client.doctree  contracts.doctree  decorators.doctree  environment.pickle  index.doctree  lsig.doctree  migration.doctree  models.doctree  precompile.doctree  sandbox.doctree  state.doctree  structs.doctree  testing.doctree  usage.doctree
docs/html/: .buildinfo  application.html  application_client.html  boxes.html  client.html  contracts.html  decorators.html  genindex.html  index.html  lsig.html  migration.html  models.html  objects.inv  precompile.html  py-modindex.html  sandbox.html  search.html  searchindex.js  state.html  structs.html  testing.html  usage.html
docs/source/: application.rst  application_client.rst  authorization.rst  boxes.rst  client.rst  conf.py  contracts.rst  decorators.rst  index.rst  lsig.rst  migration.rst  models.rst  precompile.rst  sandbox.rst  state.rst  structs.rst  testing.rst  usage.rst
examples/: conftest.py  requirements.txt
examples/account-storage/: lsig.py  main.py
examples/account_state/: contract.py  main.py
examples/account_storage/: README.md  demo.py  disk_hungry.py  main.py  test_demo.py
examples/amm/: README.md  __init__.py  amm.py  amm_test.py  constant_product_amm.ipynb  constant_product_amm.py  demo.py  main.py  pt_sourcemap_test.py
examples/arc20/: main.py
examples/blueprint/: app.py  demo.py  main.py  test_demo.py
examples/box-expr/: app.py
examples/boxen/: README.md  app_member.py  application.py  demo.py  main.py  membership_club.py  test_demo.py
examples/c2c/: README.md  c2c_main.py  c2c_sub.py  contract.py  demo.py  main.py  test_demo.py
examples/client/: README.md  client.py  demo.py  main.py  nicknames.py  test_demo.py
examples/docs_app/: README.md  app_1.py  app_client.py  app_handlers.py  app_state.py
examples/golf/: demo.py  insertion_sort.py  main.py  sorted_integers.py  test_demo.py
examples/jackpot/: Jackpot.json  application.py  approval.teal  contract.json  main.py
examples/lsig/: contract.py  lsig.py  main.py  test_demo.py
examples/merkle_tree/: README.md  application.py  demo.py  merkle.py  offchain_merkle.py  test_demo.py
examples/model/: contract.py  main.py  model.py
examples/my_sick_app/: contract.py  main.py
examples/nested_precompile/: demo.py  main.py  nested_application.py  test_demo.py
examples/offload-compute/: main.py  test_demo.py
examples/offload_compute/: demo.py  eth_checker.py  lsig.py  main.py  test_demo.py
examples/opup/: contract.py  demo.py  main.py  op_up.py  test_demo.py
examples/oracle/: contract.py
examples/royalty/: contract.py  main.py
scripts/: gen.sh
tests/: application_test.py  authorize_test.py  box_list_test.py  box_mapping_test.py  conftest.py  decorators_test.py  global_blob_test.py  helpers.py  inline_asm_test.py  iter_test.py  list_test.py  local_blob_test.py  logic_signature_test.py  mapping_test.py  math_test.py  precompile_test.py  state_aggregates_test.py  state_test.py  string_test.py
(+310 files in other folders)
